--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -68,13 +68,13 @@
                 data-edition="uk">
                     <a href="@Configuration.id.membershipUrl/supporter?INTCMP=DOTCOM_HEADER_BECOMEMEMBER_UK">
                         @fragments.inlineSvg("marque-36", "icon", List("main-menu__icon", "main-menu__icon--membership"))
-                        membership
+                        become a supporter
                     </a>
             </li>
 
             <li class="navigation-group__item js-editionalise-secondary-nav"
                 data-edition="uk">
-                    <a href="@Configuration.id.membershipUrl/supporter?INTCMP=DOTCOM_HEADER_BECOMEMEMBER_UK">
+                    <a href="">
                         @fragments.inlineSvg("device", "icon", List("main-menu__icon", "main-menu__icon--subscribe"))
                         subscribe
                     </a>
