Split tweets into seperate css file and adjust logo position

--- a/common/app/views/fragments/stylesheets.scala.html
+++ b/common/app/views/fragments/stylesheets.scala.html
@@ -25,10 +25,10 @@
     .is-updating--dark {
         background-image: url(@Static("images/auto-update-activity-dark.gif"));
     }
-    .tweet__user-name {
+    .tweet__user-name:before {
         background-image: url(@Static("images/twitter/bird.png"));
     }
-    .svg .tweet__user-name {
+    .svg .tweet__user-name:before {
         background-image: url(@Static("images/twitter/bird.svg"));
     }
 
