--- a/commercial/app/views/hosted/guardianHostedArticleOj.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticleOj.scala.html
@@ -8,31 +8,37 @@
             <h2 class="hosted__next-video--client-name hosted-tone">@{campaignOwner}</h2>
         </div>
         <div class="hosted__next-video__carousel-arrows">
-            @fragments.inlineSvg("arrow-right", "icon", List("arrow-left"))
-            @fragments.inlineSvg("arrow-right", "icon", List("arrow-right"))
+            @fragments.inlineSvg("arrow-right", "icon", List("arrow-left", "prev-oj-item"))
+            @fragments.inlineSvg("arrow-right", "icon", List("arrow-right", "next-oj-item"))
         </div>
-        @for(nextPage <- nextPages) {
-            <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
-                <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
-                <p class="hosted__next-page-title">@{nextPage.title}</p>
-            </a>
-            <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
-                <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
-                <p class="hosted__next-page-title">@{nextPage.title}</p>
-            </a>
-            <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
-                <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
-                <p class="hosted__next-page-title">@{nextPage.title}</p>
-            </a>
-            <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
-                <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
-                <p class="hosted__next-page-title">@{nextPage.title}</p>
-            </a>
-            <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
-                <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
-                <p class="hosted__next-page-title">@{nextPage.title}</p>
-            </a>
-        }
+        <div class="hosted__next-video__carousel-wrapper js-carousel-wrapper" data-number-of-items="10">
+            <ul>
+            @for(nextPage <- nextPages) {
+                <li class="hosted__next-video__carousel-item">
+                    <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
+                        <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
+                        <p class="hosted__next-page-title">@{nextPage.title}</p>
+                    </a>
+                    <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
+                        <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
+                        <p class="hosted__next-page-title">@{nextPage.title}</p>
+                    </a>
+                    <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
+                        <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
+                        <p class="hosted__next-page-title">@{nextPage.title}</p>
+                    </a>
+                    <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
+                        <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
+                        <p class="hosted__next-page-title">@{nextPage.title}</p>
+                    </a>
+                    <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile" data-link-name="Next Hosted Page: @{nextPage.title}">
+                        <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Page: @{nextPage.title}">
+                        <p class="hosted__next-page-title">@{nextPage.title}</p>
+                    </a>
+                </li>
+            }
+            </ul>
+        </div>
     </div>
 }
 
