--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -45,7 +45,7 @@
         </ul>
 
         @if(SearchSwitch.isSwitchedOn) {
-            <ul class="navigation-group navigation-no-border">
+            <ul class="navigation-group">
                 <li class="navigation-group__item navigation-group__item--search">
                     <form class="navigation-group__search-container" action="https://www.google.co.uk/search">
                         <input type="text" name="q" class="navigation-group__search-box" placeholder="search for...">
@@ -86,7 +86,6 @@
 
         @Edition.all.map { edition =>
             <ul class="navigation-group
-                navigation-no-border
                 js-editionalise-secondary-nav
                 secondary-navigation"
                 data-edition=@{edition.id.toLowerCase}
