--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -1,7 +1,7 @@
 @import common.commercial.hosted.HostedVideoPage
 @import common.commercial.hosted.hardcoded.Support.makeshiftPage
 @import conf.Configuration.site.host
-@import views.html.hosted.{guardianHostedCta, guardianHostedHeader, guardianHostedShareButtons, hostedVideoOnward}
+@import views.html.hosted.{guardianHostedCta, guardianHostedHeader, guardianHostedShareButtons, hostedVideoOnward, guardianHostedControlButtons}
 @(page: HostedVideoPage)(implicit request: RequestHeader)
 
 @main(page, Some("commercial")) { } {
@@ -52,23 +52,7 @@
                         src="https://www.youtube.com/embed/@youtubeId?modestbranding=1&showinfo=0&rel=0&enablejsapi=1@{if(host != "") s"&origin=$host" else ""}"
                         frameborder="0"
                         allowfullscreen=""></iframe>
-                        <div class="vjs-control-bar youtube-player">
-                            <div class="vjs-current-time vjs-time-control vjs-control" aria-hidden="true">
-                                <div class="vjs-current-time-display" aria-live="off">
-                                    <span class="vjs-control-text">Current Time </span><span class="js-youtube-current-time">0:00</span>
-                                </div>
-                            </div>
-                            <div class="vjs-time-control vjs-time-divider" aria-hidden="true">
-                                <div>
-                                    <span>/</span>
-                                </div>
-                            </div>
-                            <div class="vjs-duration vjs-time-control vjs-control" aria-hidden="true">
-                                <div class="vjs-duration-display" aria-live="off">
-                                    <span class="vjs-control-text">Duration Time</span>@{"%2d:%02d".format(page.video.duration/60, page.video.duration % 60)}
-                                </div>
-                            </div>
-                        </div>
+                        @guardianHostedControlButtons(page)
                     }.getOrElse {
                         <video
                         data-duration="@{page.video.duration}"
