--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -668,3 +668,75 @@ svg.main-menu__icon--social__svg {
 .no-text-transform {
     text-transform: none;
 }
+
+// Breathing space between header and content
+@include mq($until: tablet) {
+    .has-new-header {
+        .weather {
+            padding-top: 1px;
+        }
+
+        .fc-container--first .fc-container__inner,
+        .index-page-header {
+            padding-top: $gs-baseline / 2 + $gs-baseline / 4;
+        }
+
+        .content__labels {
+            padding: ($gs-baseline / 2 + $gs-baseline / 4) 0;
+        }
+    }
+}
+
+/****************
+ * Tertiary Nav
+ ****************/
+
+.tertiary-navigation {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    margin-left: $gs-gutter / 2;
+    margin-right: $gs-gutter / 2;
+
+    @include mq(mobileLandscape) {
+        margin-left: $gs-gutter;
+        margin-right: $gs-gutter;
+    }
+}
+
+.tertiary-navigation__item {
+    width: calc(50% - #{$gs-gutter / 2});
+    border-top: 1px solid $neutral-5;
+    padding-bottom: $gs-baseline / 2;
+}
+
+.tertiary-navigation__link {
+    @include fs-textSans(5);
+    font-weight: 600;
+    color: $news-main-1;
+}
+
+.tertiary-navigation__icon {
+    background-color: $news-main-2;
+    height: $gs-gutter;
+    width: $gs-gutter;
+    margin-top: 2px;
+    float: right;
+
+    &:before {
+        content: '';
+        display: block;
+        // Visually, this is the best size for this icon
+        width: 7px;
+        height: 7px;
+        border: 2px solid #ffffff;
+        transform: rotate(-45deg);
+        border-top: 0;
+        border-left: 0;
+        // Optically aligns the icon in it's container
+        margin-top: 5px;
+        margin-left: 4px;
+    }
+}
