--- a/applications/app/views/fragments/indexBody.scala.html
+++ b/applications/app/views/fragments/indexBody.scala.html
@@ -59,7 +59,7 @@
 
                 @defining(IndexPage.makeFront(index, Edition(request)).containers) { containers =>
                     @containers.map { containerDefinition =>
-                        @container(containerDefinition, empty)
+                        @container(containerDefinition, empty, pageId = index.page.metadata.url.drop(1))
                     }
                 }
 
