--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -627,9 +627,7 @@
 .ad-slot--fluid {
     min-height: 250px;
     width: auto;
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 0;
+    padding: 0;
 
     &.ad-slot--liveblog-inline {
         @include mq(mobile, $until: mobileLandscape) {
