fixing bug where html would move when the menu is open

--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -11,6 +11,7 @@ $mobile-medium: 375px; // Breakpoint for our most common device sizes
 .nav-is-open {
     overflow: hidden;
     position: fixed;
+    width: 100%;
 }
 
 .new-header__inner {
