Add jobs back into international header

--- a/common/app/views/fragments/topNav/servicesLinks.scala.html
+++ b/common/app/views/fragments/topNav/servicesLinks.scala.html
@@ -117,6 +117,10 @@
         </div>
     }
     @if(Edition(request) == International){
+        <div class="brand-bar__item brand-bar__item--jobs hide-until-tablet hide-on-slim-header">
+            <a class="brand-bar__item--action" data-link-name="uk : topNav : jobs"
+            href="https://jobs.theguardian.com/?INTCMP=NGW_TOPNAV_INT_GU_JOBS">jobs</a>
+        </div>
         <div class="brand-bar__item brand-bar__item--soulmates desktop-only hide-on-slim-header">
             <a class="brand-bar__item--action" data-link-name="int : topNav : soulmates"
                href="https://soulmates.theguardian.com/?INTCMP=NGW_TOPNAV_INT_GU_SOULMATES">dating</a>
