--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -636,7 +636,8 @@
     padding-right: 0;
     padding-bottom: 0;
     &:not(.ad-slot--im) {
-    width: auto;  }
+        width: auto;
+    }
 
 
     &.ad-slot--liveblog-inline {
