Correct alt text of logos

--- a/common/app/views/fragments/commercial/cardLogo.scala.html
+++ b/common/app/views/fragments/commercial/cardLogo.scala.html
@@ -4,7 +4,7 @@
     @branding.label
     <a class="badge__link" href="@branding.sponsorLink" data-link-name="logo link">
         <img src="@branding.sponsorLogo.url"
-             alt="@{branding.sponsorName}'s logo"
+             alt="@{branding.sponsorName}"
              class="badge__logo">
     </a>
 </div>
