--- a/common/app/views/fragments/commercial/containerLogo.scala.html
+++ b/common/app/views/fragments/commercial/containerLogo.scala.html
@@ -5,7 +5,7 @@
     @branding.label
     <a class="badge__link" href="@branding.sponsorLink" data-link-name="logo link">
         <img src="@branding.sponsorLogo.url"
-             alt="@{branding.sponsorName}'s logo"
+             alt="@{branding.sponsorName}"
              class="badge__logo">
     </a>
     @if(branding.sponsorshipType != PaidContent) {
