--- a/common/app/views/fragments/commercial/pageLogo.scala.html
+++ b/common/app/views/fragments/commercial/pageLogo.scala.html
@@ -10,14 +10,14 @@
                 <amp-img src="@branding.sponsorLogo.url"
                 width="@dim.width"
                 height="@dim.height"
-                alt="@{branding.sponsorName}'s logo"
+                alt="@{branding.sponsorName}"
                 class="badge__logo"></amp-img>
             }.getOrElse {
                 <p>@branding.sponsorName</p>
             }
         } else {
             <img src="@branding.sponsorLogo.url"
-            alt="@{branding.sponsorName}'s logo"
+            alt="@{branding.sponsorName}"
             class="badge__logo">
         }
     </a>
