Move logo to separate template

--- a/common/app/views/fragments/commercial/cardLogo.scala.html
+++ b/common/app/views/fragments/commercial/cardLogo.scala.html
@@ -1,10 +1,5 @@
 @(branding: common.commercial.Branding, isStandardSizeCard: Boolean)(implicit request: RequestHeader)
 
 <div class="badge @if(!isStandardSizeCard) {badge--branded}">
-    @branding.label
-    <a class="badge__link" href="@branding.sponsorLink" data-link-name="logo link">
-        <img src="@branding.sponsorLogo.url"
-             alt="@{branding.sponsorName}"
-             class="badge__logo">
-    </a>
+    @logo(branding)
 </div>
