Hosted galleries - get content from CAPI (WIP) and don't crop landscape images - should be cropped in Grid

--- a/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
@@ -22,5 +22,8 @@
                 <img class="hosted-gallery__next-gallery-image" src="@nextPage.imageUrl"/>
             </a>
         }
+        @if(nextPages.isEmpty){
+            <div class="js-onward-placeholder"></div>
+        }
     </div>
 
