--- a/article/app/views/fragments/articleBodyExplore.scala.html
+++ b/article/app/views/fragments/articleBodyExplore.scala.html
@@ -27,6 +27,8 @@
             <div class="content__main">
                 <div class="gs-container">
                     <div class="content__main-column content__main-column--article js-content-main-column">
+                        @fragments.contentMeta(article, model)
+
                         <div class="content__article-body from-content-api js-article__body" itemprop="articleBody">
                             @BodyCleaner(article, article.fields.body, amp = amp)
                         </div>
