Fix condition for logo css class

--- a/common/app/views/fragments/commercial/cardLogo.scala.html
+++ b/common/app/views/fragments/commercial/cardLogo.scala.html
@@ -1,5 +1,5 @@
 @(branding: common.commercial.Branding, isStandardSizeCard: Boolean)(implicit request: RequestHeader)
 
-<div class="badge @if(!isStandardSizeCard) {badge--branded}">
+<div class="badge @if(isStandardSizeCard){badge--branded}">
     @logo(branding)
 </div>
