Desktop, meet tablet

--- a/static/src/stylesheets/module/_layout-hints.scss
+++ b/static/src/stylesheets/module/_layout-hints.scss
@@ -38,7 +38,7 @@
 }
 
 figure.element.element--supporting {
-    @include mq(desktop) {
+    @include mq(tablet) {
         position: relative;
         float: left;
         width: gs-span(4);
