--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -7,7 +7,7 @@
     <li class="main-navigation__item navigation-border js-navigation-item">
         <details class="js-close-nav-list main-navigation__primary-list" id="primary-list-@topLevelSection.name" open>
             <summary class="main-navigation__item__button js-navigation-button"
-                data-link-name="main-navigation-section : @topLevelSection.name">
+                data-link-name="nav2 : secondary : summary-@topLevelSection.name">
 
                 <i class="main-menu__icon main-menu__icon--chevron"></i>
                 @topLevelSection.name
@@ -23,7 +23,10 @@
 
                     @topLevelSection.getEditionalisedNavLinks(edition).map { sectionItem =>
                         <li class="navigation-group__item">
-                            <a href="@LinkTo { @sectionItem.url }" data-link-name="main-navigation-item : @sectionItem.name">@sectionItem.name</a>
+                            <a href="@LinkTo { @sectionItem.url }"
+                                data-link-name="nav2 : secondary : @sectionItem.name">
+                                    @sectionItem.name
+                            </a>
                         </li>
                     }
                 </ul>
@@ -32,12 +35,10 @@
     </li>
 }
 
-<label
-    for="main-menu-toggle"
+<label for="main-menu-toggle"
     class="main-menu-container__overlay"
     aria-hidden="true"
-    data-link-name="main-navigation : overlay"
-></label>
+    data-link-name="nav2 : overlay"></label>
 
 <div class="main-menu-container">
 
@@ -55,7 +56,7 @@
                 <li class="navigation-group__item navigation-group__item--search">
                     <form class="navigation-group__search-container"
                         action="https://www.google.co.uk/search"
-                        data-link-name="main-navigation : search">
+                        data-link-name="nav2 : search">
 
                         <input type="text" name="q" class="navigation-group__search-box" placeholder="search for...">
                         <input type="hidden" name="as_sitesearch" value="www.theguardian.com">
@@ -73,7 +74,6 @@
 
         <ul class="navigation-group navigation-group--grey secondary-navigation">
 
-
             @Edition.all.map { edition =>
 
                 @NewNavigation.MembershipLinks.getEditionalisedNavLinks(edition).map { item =>
@@ -81,7 +81,7 @@
                         data-edition=@{edition.id.toLowerCase}
                         @if(edition.id.toLowerCase != "uk") { hidden }>
 
-                            <a href="@item.url" data-link-name="main-navigation : @item.name">
+                            <a href="@item.url" data-link-name="nav2 : @item.name">
                                 @fragments.inlineSvg(item.iconName, "icon", List("main-menu__icon"))
                                 @item.name
                             </a>
@@ -102,7 +102,7 @@
 
                 @NewNavigation.NavFooterLinks.getEditionalisedNavLinks(edition).map { item =>
                     <li class="navigation-group__item">
-                        <a href="@LinkTo { @item.url }" data-link-name="main-navigation-item : @item.name">
+                        <a href="@LinkTo { @item.url }" data-link-name="nav2 : @item.name">
                             @item.name
                         </a>
                     </li>
@@ -114,7 +114,7 @@
 
             <li class="navigation-group__item">
                 <a href="https://www.facebook.com/theguardian"
-                    data-link-name="main-navigation-item : facebook">
+                    data-link-name="nav2 : facebook">
 
                     @fragments.inlineSvg("share-facebook", "icon", List("main-menu__icon", "main-menu__icon--social"))
                     Facebook
@@ -122,7 +122,7 @@
             </li>
             <li class="navigation-group__item">
                 <a href="https://twitter.com/guardian"
-                data-link-name="main-navigation-item : twitter">
+                data-link-name="nav2 : twitter">
 
                     @fragments.inlineSvg("share-twitter", "icon", List("main-menu__icon", "main-menu__icon--social"))
                     Twitter
