removing `summary-` for consistency

--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -7,7 +7,7 @@
     <li class="main-navigation__item navigation-border js-navigation-item">
         <details class="js-close-nav-list main-navigation__primary-list" id="primary-list-@topLevelSection.name" open>
             <summary class="main-navigation__item__button js-navigation-button"
-                data-link-name="nav2 : secondary : summary-@topLevelSection.name">
+                data-link-name="nav2 : secondary : @topLevelSection.name">
 
                 <i class="main-menu__icon main-menu__icon--chevron"></i>
                 @topLevelSection.name
