renaming data links in the js file too

--- a/common/app/views/fragments/newHeader.scala.html
+++ b/common/app/views/fragments/newHeader.scala.html
@@ -28,7 +28,7 @@
             <label for="main-menu-toggle"
                 class="new-header__nav__menu-button js-change-link"
                 tabindex="0"
-                data-link-name="nav2 : veggie-burger">
+                data-link-name="nav2 : veggie-burger : show">
                     <span class="new-header__veggie-burger-icon"></span>
                     <span class="u-h">Menu</span>
             </label>
