Hosted Pages onward journeys - clean up some css class naming, and fix a few styling issues

--- a/commercial/app/views/hosted/guardianHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle.scala.html
@@ -21,7 +21,7 @@
         border-color: @{page.campaign.fontColour.brandColour};
     }
 
-    .hosted-page .hosted__next-video--tile {
+    .hosted-page .hosted__next-page--tile {
         border-top-color: @{page.campaign.fontColour.brandColour};
     }
 
