--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -27,7 +27,7 @@
         border-top: 1px solid @{page.campaign.fontColour.brandColour};
     }
 
-    .hosted-page .hosted__next-video--tile {
+    .hosted-page .hosted__next-page--tile {
         border-top-color: @{page.campaign.fontColour.brandColour};
     }
 
