Hosted Pages onward journeys - remove the js colours module and replace with css-only version that works for new lazy-loaded onward journeys

--- a/commercial/app/views/hosted/zootropolisPage.scala.html
+++ b/commercial/app/views/hosted/zootropolisPage.scala.html
@@ -30,7 +30,7 @@
     .hosted-tone-btn svg {
         fill: #ffffff;
     }
-    .hosted-page .hosted__next-video .hosted__next-page--tile {
+    .hosted-page .hosted__next-page .hosted__next-page--tile {
         border-top-color: @{page.campaign.fontColour.brandColour};
         background: #d5f4e1;
     }
