--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -975,6 +975,6 @@ $hosted-video-height: 540px;
     position: absolute;
     width: 100%;
     height: 100%;
-    opacity: 0.1;
+    opacity: .1;
     z-index: 0;
 }
