styling tweaks to the tertiary nav

--- a/common/app/views/fragments/containers/facia_cards/container.scala.html
+++ b/common/app/views/fragments/containers/facia_cards/container.scala.html
@@ -95,7 +95,7 @@
 
                                 <li class="tertiary-navigation__item">
                                     <a class="tertiary-navigation__link" href="@LinkTo(tertiaryLink.url)" data-link-name="nav2 : tertiary : @tertiaryLink.name">
-                                        @Html(tertiaryLink.name)
+                                        <span class="tertiary-navigation__text">@Html(tertiaryLink.name)</span>
                                         <i class="tertiary-navigation__icon rounded-icon"></i>
                                     </a>
                                 </li>
