--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -708,12 +708,20 @@ svg.main-menu__icon--social__svg {
 
 .tertiary-navigation__item {
     width: calc(50% - #{$gs-gutter / 2});
+    height: $gs-row-height;
     border-top: 1px solid $neutral-5;
+    padding-top: 2px;
     padding-bottom: $gs-baseline / 2;
+}
+
+.tertiary-navigation__text {
+    width: calc(100% - #{$gs-gutter});
+    float: left;
 }
 
 .tertiary-navigation__link {
     @include fs-textSans(5);
+    line-height: 18px;
     font-weight: 600;
     color: $news-main-1;
 }
@@ -722,7 +730,6 @@ svg.main-menu__icon--social__svg {
     background-color: $news-main-2;
     height: $gs-gutter;
     width: $gs-gutter;
-    margin-top: 2px;
     float: right;
 
     &:before {
