--- a/article/app/views/fragments/articleBodyExplore.scala.html
+++ b/article/app/views/fragments/articleBodyExplore.scala.html
@@ -11,7 +11,7 @@
         <article id="article" data-test-id="article-root"
             class="@RenderClasses(Map(
                     "content content--article" -> true,
-                    "content--explore-series" -> article.content.tags.isExploreSeries,
+                    "content--explore-series" -> article.content.isExplore,
                     "explore--video" -> article.content.elements.hasMainVideo
                 ))"
 
