changing height to min-height in case longer links exist

--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -708,7 +708,7 @@ svg.main-menu__icon--social__svg {
 
 .tertiary-navigation__item {
     width: calc(50% - #{$gs-gutter / 2});
-    height: $gs-row-height;
+    min-height: $gs-row-height;
     border-top: 1px solid $neutral-5;
     padding-top: 2px;
     padding-bottom: $gs-baseline / 2;
