--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -524,8 +524,8 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
 }
 
 .navigation-border,
-[data-link-name="nav2 : crosswords"],
-[data-link-name="nav2 : today's paper"] {
+[data-link-name='nav2 : crosswords'],
+[data-link-name='nav2 : today\'s paper'] {
     // Creates a seamless line when section has dark background
     margin-top: -1px;
     position: relative;
@@ -541,8 +541,8 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
     }
 }
 
-[data-link-name="nav2 : crosswords"],
-[data-link-name="nav2 : today's paper"] {
+[data-link-name='nav2 : crosswords'],
+[data-link-name='nav2 : today\'s paper'] {
     margin-top: $gs-baseline;
 }
 
