--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -25,7 +25,7 @@
                         <li class="navigation-group__item">
                             <a href="@LinkTo { @sectionItem.url }"
                                 data-link-name="nav2 : secondary : @sectionItem.name">
-                                    @if(sectionItem.iconName.length > 0) {
+                                    @if(sectionItem.iconName.nonEmpty) {
                                         @fragments.inlineSvg(sectionItem.iconName, "icon", List("main-menu__icon"))
                                     }
                                     @sectionItem.name
