Make the signup button width constant on the Newsletters page

--- a/applications/app/views/signup/newsletters.scala.html
+++ b/applications/app/views/signup/newsletters.scala.html
@@ -39,7 +39,7 @@
 
                 <div class="newsletter-card__signup">
                     <div>
-                        <iframe src="/email/form/plain/@emailListing.listId" height="218px" data-form-title="Sign up for @emailListing.name" data-form-description="" data-form-campaign-code="newsletters-page" scrolling="no" seamless frameborder="0" class="iframed--overflow-hidden newsletter-card__iframe js-email-sub__iframe" data-form-success-desc=".sd.sdfasdf."></iframe>
+                        <iframe src="/email/form/newsletters/@emailListing.listId" height="218px" data-form-title="Sign up for @emailListing.name" data-form-description="" data-form-campaign-code="newsletters-page" scrolling="no" seamless frameborder="0" class="iframed--overflow-hidden newsletter-card__iframe js-email-sub__iframe" data-form-success-desc=""></iframe>
                     </div>
                 </div>
             </div>
