Editionalise the Glabs link on the US edition

--- a/commercial/app/views/contentapi/item.scala.html
+++ b/commercial/app/views/contentapi/item.scala.html
@@ -61,12 +61,11 @@
 
 @stamp = {
 
-    <a @if(Edition(request).id == "AU") {
-            href="@LinkTo("/guardian-labs-australia")"
-        } else {
-            href="@LinkTo("/guardian-labs")"
-        }
-        >
+    <a @Edition(request).id match {
+            case "AU" => { href="@LinkTo("/guardian-labs-australia")" }
+            case "US" => { href="@LinkTo("/guardian-labs-us")" }
+            case _    => { href="@LinkTo("/guardian-labs")" }
+        }>
         @inlineSvg("glabs-logo", "logo")
         <span class='u-h'>Guardian Labs</span>
     </a>
